# multimodal-data-process-toolkit

./: .gitignore  README.md  package.xml  requirements.txt  run_processing.py  setup.py
config/: default_config.yaml
toolkit/: __init__.py
toolkit/adapters/: __init__.py  carla_adapter.py  ros2_bag_adapter.py
toolkit/core_logic/: __init__.py  processing.py  structures.py
toolkit/utils/: __init__.py  transformations.py
